# aoc2021

./: Cargo.toml
src/: lib.rs  main.rs
src/solutions/: eight_a.rs  eight_b.rs  eleven_a.rs  eleven_b.rs  five_a.rs  five_b.rs  four_a.rs  four_b.rs  nine_a.rs  nine_b.rs  one_a.rs  one_b.rs  seven_a.rs  seven_b.rs  six_a.rs  six_b.rs  ten_a.rs  ten_b.rs  three_a.rs  three_b.rs  two_a.rs  two_b.rs
