[package]
name = "advent_of_code_2021"
version = "0.1.0"
authors = ["nathanwhitaker"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "one_a"
path = "src/solutions/one_a.rs"

[[bin]]
name = "one_b"
path = "src/solutions/one_b.rs"

[[bin]]
name = "two_a"
path = "src/solutions/two_a.rs"

[[bin]]
name = "two_b"
path = "src/solutions/two_b.rs"

[[bin]]
name = "three_a"
path = "src/solutions/three_a.rs"

[[bin]]
name = "three_b"
path = "src/solutions/three_b.rs"

[[bin]]
name = "four_a"
path = "src/solutions/four_a.rs"

[[bin]]
name = "four_b"
path = "src/solutions/four_b.rs"

[[bin]]
name = "five_a"
path = "src/solutions/five_a.rs"

[[bin]]
name = "five_b"
path = "src/solutions/five_b.rs"

[[bin]]
name = "six_a"
path = "src/solutions/six_a.rs"

[[bin]]
name = "six_b"
path = "src/solutions/six_b.rs"

[[bin]]
name = "seven_a"
path = "src/solutions/seven_a.rs"

[[bin]]
name = "seven_b"
path = "src/solutions/seven_b.rs"

[[bin]]
name = "eight_a"
path = "src/solutions/eight_a.rs"

[[bin]]
name = "eight_b"
path = "src/solutions/eight_b.rs"

[[bin]]
name = "nine_a"
path = "src/solutions/nine_a.rs"

[[bin]]
name = "nine_b"
path = "src/solutions/nine_b.rs"

[[bin]]
name = "ten_a"
path = "src/solutions/ten_a.rs"

[[bin]]
name = "ten_b"
path = "src/solutions/ten_b.rs"

[[bin]]
name = "eleven_a"
path = "src/solutions/eleven_a.rs"

[[bin]]
name = "eleven_b"
path = "src/solutions/eleven_b.rs"

[dependencies]
